ajustes en colores, tamaños y fuentes

--- a/index.html
+++ b/index.html
@@ -13,19 +13,9 @@
 	<meta name="author" content="FREEHTML5.CO" />
 
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
-	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Playwrite+DK+Uloopet:wght@100..400&display=swap" rel="stylesheet">
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -36,10 +26,6 @@
 
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
-
-	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
@@ -193,7 +179,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>¿Nos acompañaras?</h2>
+					<h2>Acompañnos</h2>
 					<p>Por favor dejanos tu nombre para saber que contamos con tu valiosa presencia, Gracias.</p>
 				</div>
 			</div>
@@ -227,7 +213,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">Si deseas una invitación para tu evento <a href="http://freehtml5.co/" target="_blank">contáctanos</a></small>
+						<small class="block fs-3">Si deseas una invitación para tu evento <a href="http://freehtml5.co/" target="_blank">contáctanos</a></small>
 					</p>
 				</div>
 			</div>
@@ -270,9 +256,9 @@
 
     // default example
     simplyCountdown('.simply-countdown-one', {
-        year: d.getFullYear(),
-        month: d.getMonth() + 1,
-        day: d.getDate(),
+        year: 2024,
+        month: 11,
+        day: 28,
 		enableUtc: false,
 		words: {
                 days: 'día',
