ajustes en colores, tamaños y fuentes 2

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
+	<!-- Owl Carousel  -->
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 	
@@ -53,7 +57,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Joel &amp; Sheila</h1>
-							<h2>Nos uniermos por siempre en</h2>
+							<h2>Nos uniermos por siempre en:</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#fh5co-started" smooth class="btn btn-default btn-sm">Confirmar asitencia</a></p>
 						</div>
@@ -180,7 +184,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Acompañnos</h2>
-					<p>Por favor dejanos tu nombre para saber que contamos con tu valiosa presencia, Gracias.</p>
+					<p>Por favor dejanos tu nombre para saber que contamos con tu valiosa presencia y nosotros te indicaremos el numero de lugares que hemos reservado para ti en nuestra lista de invitados, gracias.</p>
 				</div>
 			</div>
 			<div class="row animate-box">
@@ -213,7 +217,10 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block fs-3">Si deseas una invitación para tu evento <a href="http://freehtml5.co/" target="_blank">contáctanos</a></small>
+						¿Tienes un evento en puerta y te gustaría una invitación digital como esta?<br>
+					</p>
+					<p>
+						Conáctanos dando click o tocando <a href="https://api.whatsapp.com/send?phone=+527298041817&text=Hola%21%20Me%20podrías%20dar%20información%20sobre%20las%20invitaciones%20web%20para%20mi%20próximo%20evento%20por%20favor?" target="_blank">AQUÍ</a>
 					</p>
 				</div>
 			</div>
