Parece que esta listo 2

--- a/index.html
+++ b/index.html
@@ -50,6 +50,24 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">
+		<!-- <nav class="fh5co-nav" role="navigation">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-10 text-right menu-1">
+						<ul>
+							<li class="active"><a href="index.html">Inicio</a></li>
+							<li><a href="#fh5co-couple">Invite</a></li>
+							<li><a href="#fh5co-event">Eventos</a></li>
+							<li><a href="#fh5co-gifts">Regalos</a></li>
+							<li><a href="#fh5co-couple-story">Nuestra historia</a></li>
+							<li><a href="#fh5co-started">Confirmar asistencia</a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=+527298041817&text=Hola%21%20Me%20podrías%20dar%20información%20sobre%20las%20invitaciones%20web%20para%20mi%20próximo%20evento%20por%20favor?" target="_blank">Quiero una invitación web</a></li>
+						</ul>
+					</div>
+				</div>
+				
+			</div>
+		</nav> -->
 
 	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/bride-1255520_1280.jpg);">
 		<div class="overlay"></div>
@@ -157,7 +175,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-services" class="fh5co-section-gray">
+	<div id="fh5co-gifts" class="fh5co-section-gray">
 		<div class="container">
 			
 			<div class="row animate-box">
