Parece que esta listo 3

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t">
+					<div class="display-t title">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Joel &amp; Sheila</h1>
 							<h2>Nos uniermos por siempre en:</h2>
@@ -456,6 +456,8 @@
 
 		window.open(urlWhats, '_blank');
 	})
+
+	
 
 </script>
 
