--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Nuestra Boda Joel &amp; Sheila</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta name="description" content="Acompañanos a dsifrutar y festejar este día tan importante e inalvidable en nuestras vidas"/>
+	<meta name="keywords" content="" />
 	<meta name="author" content="FREEHTML5.CO" />
 
 
