--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
 	</head>
 	<body>
-		<audio id="sound" src="./musicaa.mp3" preload="auto"></audio>
+		<a id="clic" href="#" onscroll="play_single_soung"></a>
+		<audio id="sound" src="./musicaa.mp3" autoplay preload="auto"></audio>
 		
 	<div class="fh5co-loader"></div>
 	
