--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 	</head>
 	<body>
-		<a id="clic" href="#" onscroll="play_single_soung"></a>
-		<audio id="sound" src="./musicaa.mp3" autoplay preload="auto"></audio>
+		<a id="clic" href="#"></a>
+		<audio id="sound" src="./musicaa.mp3" autoplay></audio>
 		
 	<div class="fh5co-loader"></div>
 	
@@ -78,10 +78,14 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t title">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
+							<div class="div-icon">
+								<i id="play" class="icon-play"></i>
+								<i id="pause" class="icon-pause"></i>
+							</div>
 							<h1>Joel &amp; Sheila</h1>
 							<h2>Nos uniermos por siempre en:</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#fh5co-started" smooth class="btn btn-default btn-sm">Confirmar asitencia</a></p>
+							<p id="confirmar"><a href="#fh5co-started" smooth class="btn btn-default btn-sm">Confirmar asitencia</a></p>
 						</div>
 					</div>
 				</div>
