--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 		</div>
 	</div>
 
-	<div class="qr-container" id="qrContainer">
+	<div class="qr-container text-center" id="qrContainer">
         <h2>Tu código QR:</h2>
         <div id="qrcode"></div>
     </div>
@@ -483,8 +483,8 @@
 
 		new QRCode(qrContainer, {
 			text: qrData,
-			width: 200, // Ancho del QR
-			height: 200, // Alto del QR
+			width: 50, // Ancho del QR
+			height: 50, // Alto del QR
 			colorDark: "#000000", // Color del código
 			colorLight: "#ffffff", // Fondo del código
 		});
