--- a/index.html
+++ b/index.html
@@ -481,11 +481,11 @@
 		 // Generate QR code
 		/*  new QRCode(qrContainer, qrData); */
 
-		new QRCode(qrContainer, {
+		/* new QRCode(qrContainer, {
 			text: qrData,
 			colorDark: "#000000", // Color del código
 			colorLight: "#ffffff", // Fondo del código
-		});
+		}); */
 
 			console.log(qrData)
 
