--- a/index.html
+++ b/index.html
@@ -481,16 +481,16 @@
 		 // Generate QR code
 		/*  new QRCode(qrContainer, qrData); */
 
-		/* new QRCode(qrContainer, {
+		new QRCode(qrContainer, {
 			text: qrData,
 			colorDark: "#000000", // Color del código
 			colorLight: "#ffffff", // Fondo del código
-		}); */
+		});
 
-			console.log(qrData)
+		console.log(qrData)
 
 
-		window.open(urlWhats, '_blank');
+		/* window.open(urlWhats, '_blank') */;
 	})
 
 	
